# rspirv

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  MAINTENANCE.md  README.md  rustfmt.toml
.github/workflows/: ci.yaml  publish.yaml
autogen/: Cargo.toml  README.md  binary.rs  build.rs  dr.rs  header.rs  lib.rs  sr.rs  structs.rs  table.rs  utils.rs
autogen/src/: binary.rs  dr.rs  header.rs  main.rs  sr.rs  structs.rs  table.rs  utils.rs
codegen/: Cargo.toml  README.md  binary.rs  build.rs  header.rs  lib.rs  memrepr.rs  mr.rs  sr.rs  structs.rs  table.rs  utils.rs
dis/: Cargo.toml  README.md  main.rs
rspirv/: Cargo.toml  README.md  build.rs  lib.rs  release.toml  spirv.rs
rspirv/binary/: assemble.rs  autogen_decode_operand.rs  autogen_disas_operand.rs  autogen_error.rs  autogen_parse_operand.rs  decode_operand.rs  decoder.rs  disas_operand.rs  disassemble.rs  error.rs  mod.rs  parse_operand.rs  parser.rs  tracker.rs
rspirv/dr/: autogen_operand.rs  constructs.rs  loader.rs  mod.rs
rspirv/grammar/: autogen_arm_motion_engine_100.rs  autogen_debuginfo.rs  autogen_glsl_std_450.rs  autogen_nonsemantic_clspvreflection.rs  autogen_nonsemantic_debugbreak.rs  autogen_nonsemantic_debugprintf.rs  autogen_nonsemantic_shader_debuginfo_100.rs  autogen_nonsemantic_vkspreflection.rs  autogen_opencl_debuginfo_100.rs  autogen_opencl_std_100.rs  autogen_spv_amd_gcn_shader.rs  autogen_spv_amd_shader_ballot.rs  autogen_spv_amd_shader_explicit_vertex_parameter.rs  autogen_spv_amd_shader_trinary_minmax.rs  autogen_table.rs  autogen_tables.rs  autogen_tosa_001000_1.rs  glsl_std_450.rs  mod.rs  reflect.rs  syntax.rs  table.rs
rspirv/ir/: types.rs
rspirv/lift/: autogen_context.rs  mod.rs  storage.rs
rspirv/mr/: build_annotation.rs  build_constant.rs  build_debug.rs  build_norm_insts.rs  build_terminator.rs  build_type.rs  builder.rs  constructs.rs  loader.rs  mod.rs  operand.rs
rspirv/sr/: autogen_context.rs  autogen_decoration.rs  autogen_instruction.rs  autogen_instruction_enums.rs  autogen_instruction_lift.rs  autogen_instruction_struct.rs  autogen_instruction_structs.rs  autogen_instructions.rs  autogen_module.rs  autogen_ops.rs  autogen_type_creation.rs  autogen_type_enum_check.rs  autogen_type_lift.rs  autogen_type_struct.rs  autogen_types.rs  constants.rs  context.rs  decoration.rs  instructions.rs  items.rs  mod.rs  module.rs  op.rs  storage.rs  structs.rs  ty.rs  type_creation.rs  type_enum_check.rs  types.rs
rspirv/tests/: spirv_blobs.rs  test_data.rs
rspirv/utils/: mod.rs  num.rs  version.rs
spirv/: Cargo.toml  README.md  autogen_spirv.rs  lib.rs  release.toml  spirv.rs
src/: binary.rs  grammar.rs  lib.rs  main.rs  mr.rs  spirv.rs
src/binary/: decode_operand.rs  decoder.rs  disassemble.rs  error.rs  mod.rs  parse_operand.rs  parser.rs  producer.rs  reader.rs
src/grammar/: instruction.rs  mod.rs  operand_type.rs  reflect.rs  syntax.rs  table.rs
src/mr/: builder.rs  constructs.rs  loader.rs  mod.rs  operand.rs  structs.rs
utils/: gen_grammar_tables.py  gen_operand_type_rs.py  gen_spirv_rs.py  update_tables.py
