[package]
name = "rspirv-autogen"
version = "0.1.0"
authors = [
	"gfx-rs developers",
	"Lei Zhang <antiagainst@gmail.com>",
]
edition = "2018"

publish = false

description = "Automatic code generation module for rspirv"
documentation = "https://docs.rs/rspirv"
repository = "https://github.com/gfx-rs/rspirv"
readme = "README.md"
license = "Apache-2.0"
keywords = ["spirv", "grammar", "codegen"]

[dependencies]
heck = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
