[package]
name = "rspirv-codegen"
version = "0.1.0"
authors = ["Lei Zhang <antiagainst@gmail.com>"]

build = "build.rs"
publish = false

description = "Code generation module for rspirv"
documentation = "https://docs.rs/rspirv"
repository = "https://github.com/google/rspirv"
readme = "README.md"
license = "Apache-2.0"
keywords = ["spirv", "grammar", "codegen"]

[lib]
path = "lib.rs"

[build-dependencies]
proc-macro2 = "0.4"
quote = "0.6"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
