[package]
name = "rspirv-dis"
version = "0.1.0"
authors = ["Lei Zhang <antiagainst@gmail.com>"]

description = "SPIR-V module disassembler"
repository = "https://github.com/google/rspirv"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["spirv", "diassembler", "decoder"]

[[bin]]
name = "rspirv-dis"
path = "main.rs"

[dependencies]
clap = "2.20"

[dependencies.rspirv]
path="../rspirv"
