[package]
name = "rspirv-dis"
version = "0.1.0"
authors = ["Lei Zhang <antiagainst@gmail.com>"]
edition = "2018"

description = "SPIR-V module disassembler"
repository = "https://github.com/gfx-rs/rspirv"
readme = "../README.md"
license = "Apache-2.0"
keywords = ["spirv", "diassembler", "decoder"]

[[bin]]
name = "rspirv-dis"
path = "main.rs"

[dependencies]
clap = "2.33"

[dependencies.rspirv]
path="../rspirv"
