[package]
name = "rspirv"
version = "0.5.4"
authors = ["Lei Zhang <antiagainst@gmail.com>"]
edition = "2018"

description = "Rust library APIs for SPIR-V module manipulation"
documentation = "https://docs.rs/rspirv"
repository = "https://github.com/gfx-rs/rspirv"
readme = "README.md"
license = "Apache-2.0"
keywords = ["spirv", "vulkan", "opengl", "opencl"]

[lib]
path = "lib.rs"

[badges]
travis-ci = { repository = "gfx-rs/rspirv" }

[dependencies]
num = "0.2"
derive_more = "0.7"
clippy = { version = "0.0", optional = true }
fxhash = "0.2"

[dependencies.spirv_headers]
version = "1.3"
path = "../spirv"

[build-dependencies]
rspirv-codegen = { path = "../codegen", version = "0.1" }

[dev-dependencies]
assert_matches = "1.1"
