[package]
name = "spirv"
version = "0.2.0+1.5.4"
authors = ["Lei Zhang <antiagainst@gmail.com>"]
edition = "2018"

description = "Rust definition of SPIR-V structs and enums"
documentation = "https://docs.rs/spirv"
repository = "https://github.com/gfx-rs/rspirv"
readme = "README.md"
license = "Apache-2.0"
keywords = ["spirv", "definition", "struct", "enum"]

[features]
serialize = ['serde']
deserialize = ['serde']

[lib]
path = "lib.rs"

[dependencies]
bitflags = "1"
num-traits = { version = "0.2", default-features = false }
serde = {version = "1", optional = true, features = ["derive"]}
